<resources>
    <string name="app_name">Muzi Music</string>

    <string name="create_new_account">Create New Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="user">User</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_log_in">I already have an account. \u0020</string>
    <string name="log_in"> Log in</string>
    <string name="do_not_leave_empty">Do not leave empty</string>
    <string name="at_least_6_character">At least 6 character</string>
    <string name="not_match">Not match</string>
    <string name="wrong_format">Wrong Format \n</string>
    <string name="join_muzi">Join Muzi</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="don_t_have_account">Don\'t have an account .\u0020</string>
    <string name="password_reset">Password Reset</string>
    <string name="enter_your_email">Enter your email address that you used to register.\nWe’ll send you an OTP to reset your password.</string>
    <string name="send">Send</string>
    <string name="don_t_have_the_code_resend_otp">Don\'t have the code ?\n</string>
    <string name="next">Next</string>
    <string name="resend_it">Resend it</string>
    <string name="done">Done</string>
    <string name="home">Home</string>
    <string name="library">Library</string>
    <string name="chart">Chart</string>
    <string name="me">Me</string>
    <string name="search_songs_accounts">Search songs, accounts</string>
    <string name="ok">OK</string>
    <string name="seekbar_content">..:.. / ..:..</string>
    <string name="open_app_to_choose_music">Open app to choose music</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_code">Enter Code</string>
    <string name="new_password">New Password</string>
    <string name="no_account_is_locked">No account is locked</string>
    <string name="total_songs">Total Songs : 0</string>
    <string name="total_love">Total love : 0</string>
    <string name="tv_total_follower">Total Followers : 0</string>
    <string name="tv_total_following">Total Following : 0</string>
    <string name="tv_join_at">Join at : 12/11/2023</string>
    <string name="follow">Follow</string>
    <string name="play_music">play music</string>
    <string name="songs">Songs</string>
    <string name="albums">Albums</string>
    <string name="edit">Edit</string>
    <string name="type_comment">Type comment ...</string>
    <string name="dot">•</string>
    <string name="reply">Reply</string>
    <string name="delete">Delete</string>
    <string name="love">Love</string>
    <string name="delete_notification">Delete notification</string>
    <string name="add_playlist">Add playlist</string>
    <string name="you_don_t_have_any_playlist">You don\'t have any playlist</string>
    <string name="new_song">New Song</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="live_your_days_with_music_and_make_a_different_experience">Live your days with music and make a different experience</string>
    <string name="get_started">Get Started</string>
    <string name="remember_me">Remember me</string>
    <string name="do_not_leave_email_empty">Do not leave email empty</string>
    <string name="email_format_is_not_validate">Email format is not validate</string>
    <string name="do_not_leave_user_empty">Do not leave user empty</string>
    <string name="password_has_at_least_6_characters">Password has at least 6 characters</string>
    <string name="do_not_leave_confirm_password_empty">Do not leave confirm password empty</string>
    <string name="followers">Followers</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="playlist">Playlist</string>
    <string name="type">Type</string>
    <string name="following">Following</string>
    <string name="top_listen">Top listen</string>
    <string name="singer">Singer</string>
    <string name="music_for_your_mood">Music for your mood</string>
    <string name="enter_name_album">Enter name album</string>
    <string name="album_is_duplicate">Album is duplicate</string>
    <string name="album">Album</string>
    <string name="name_album">Name album</string>
    <string name="add">Add</string>
    <string name="delete_album">Delete album</string>
    <string name="add_album">Add Album</string>
    <string name="you_dont_have_any_album">You dont have any album</string>
    <string name="add_song">Add Song</string>
    <string name="type_the_song_name">Type the song name</string>
    <string name="song_name">Song name</string>
    <string name="not_found_sound_path">Not found sound path</string>
    <string name="description">Description</string>
    <string name="type_description">Type description</string>
    <string name="music_file">Music file</string>
    <string name="choose_file_song">Choose file song</string>
    <string name="choose_album">Choose album</string>
    <string name="file_image">File Image</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="my_song">My Songs</string>
    <string name="you_haven_t_got_any_music">You haven\'t got any music</string>
    <string name="love_songs">Love songs</string>
    <string name="don_t_have_any_love_songs">Don\'t have any love songs</string>


</resources>