<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:paddingHorizontal="24dp">

    <TextView
        style="@style/CustomTextMedium"
        android:text="@string/music_file" />


    <TextView
        android:id="@+id/btnChooseMusic"
        style="@style/CustomTextMedium"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_55dp"
        android:layout_marginTop="@dimen/_5dp"
        android:background="@drawable/bg_edt_type"
        android:gravity="center_vertical"
       android:hint="@string/choose_file_song"
        android:paddingHorizontal="@dimen/_16dp"
        android:textColorHint="#373439"
        app:drawableEndCompat="@drawable/ic_next">

    </TextView>


    <TextView
        android:id="@+id/tvSongFileError"
        style="@style/CustomTextRegular"
        android:text="@string/not_found_sound_path"
        android:textColor="@color/red"
        android:visibility="gone" />

    <TextView
        style="@style/CustomTextMedium"
        android:layout_marginTop="@dimen/_21dp"
        android:text="@string/song_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_des"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60dp"
        android:layout_marginTop="@dimen/_5dp"
        android:hint="@string/type_the_song_name"
        app:hintTextColor="@color/silver">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/edt_song_name"
            style="@style/CustomEdittextLight"
            android:background="@drawable/bg_edt_type" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvSongNameError"
        style="@style/CustomTextRegular"
        android:text="@string/do_not_leave_empty"
        android:textColor="@color/red"
        android:visibility="gone" />

    <TextView
        style="@style/CustomTextMedium"
        android:layout_marginTop="@dimen/_21dp"
        android:text="@string/album" />



    <TextView
        android:id="@+id/btnChooseAlbum"
        style="@style/CustomTextMedium"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_55dp"
        android:layout_marginTop="@dimen/_5dp"
        android:background="@drawable/bg_edt_type"
        android:gravity="center_vertical"
        android:hint="@string/choose_album"
        android:paddingHorizontal="@dimen/_16dp"
        android:textColorHint="#373439"
        app:drawableEndCompat="@drawable/ic_next">

    </TextView>


    <TextView
        android:id="@+id/tvAlbumError"
        style="@style/CustomTextRegular"
        android:text="@string/do_not_leave_empty"
        android:textColor="@color/red"
        android:visibility="gone" />

    <TextView
        style="@style/CustomTextMedium"
        android:layout_marginTop="@dimen/_21dp"
        android:text="@string/type" />


    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_21dp" />

</LinearLayout>