<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:paddingHorizontal="12dp"
    android:paddingVertical="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/album"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            style="@style/CustomTextRegular"
            android:text="@string/name_album" />

        <EditText
            android:id="@+id/edAlbumName"
            style="@style/CustomEdittextLight"
            android:hint="@string/enter_name_album"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:inputType="text"
            android:maxLines="1" />

        <TextView
            android:id="@+id/tvError"
            style="@style/CustomTextRegular"
            android:text="@string/album_is_duplicate"
            android:visibility="gone" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_long_purple"
                android:text="@string/add"
                android:textColor="@color/white" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/pbLoading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="20dp"
                android:indeterminate="true"
                app:indicatorColor="@color/white"
                app:indicatorSize="30dp" />

        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>